--- a/docs/style.css
+++ b/docs/style.css
@@ -12,7 +12,7 @@
     border: 0; 
     outline: 0;
     box-shadow: none;
-    margin: 0 auto !important;
+    margin: 5px auto 5px auto !important;
  }
 
  #main_content, .inner {
